After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724994 - Missing icons for bookmarks in file chooser
Missing icons for bookmarks in file chooser
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2014-02-23 05:19 UTC by John Lindgren
Modified: 2014-02-23 17:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add non-symbolic fallback icons in g_content_type_get_symbolic_icon() (2.80 KB, patch)
2014-02-23 05:54 UTC, John Lindgren
none Details | Review
Add non-symbolic fallback icons in g_content_type_get_symbolic_icon() (2.87 KB, patch)
2014-02-23 06:08 UTC, John Lindgren
none Details | Review

Description John Lindgren 2014-02-23 05:19:47 UTC
When using an icon theme without symbolic icons, the file chooser sidebar displays the "missing icon" symbol for bookmarked folders.

Upon further investigation, it appears that g_file_info_get_symbolic_icon() does not include non-symbolic fallbacks.  For a folder, it returns the following icon names:

1. inode-directory-symbolic
2. inode-x-generic-symbolic
3. folder-symbolic

This is inconsistent with other xxx_get_symbolic_icon() functions, which do include the non-symbolic fallbacks.  For example, g_volume_get_symbolic_icon() returns the following icon names for a hard disk partition:

1. drive-harddisk-solidstate-symbolic
2. drive-harddisk-symbolic
3. drive-symbolic
4. drive-harddisk-solidstate
5. drive-harddisk
6. drive
Comment 1 John Lindgren 2014-02-23 05:54:26 UTC
Created attachment 270036 [details] [review]
Add non-symbolic fallback icons in g_content_type_get_symbolic_icon()

One possible solution.
Comment 2 John Lindgren 2014-02-23 06:08:14 UTC
Created attachment 270037 [details] [review]
Add non-symbolic fallback icons in g_content_type_get_symbolic_icon()

Same patch against GLib 2.38.x