Add non-symbolic fallback icons in g_content_type_get_symbolic_icon().

This makes the behavior consistent with e.g. g_volume_get_symbolic_icon().

https://bugzilla.gnome.org/show_bug.cgi?id=724994